--- a/app/src/main/res/layout/fragment_marvel_item.xml
+++ b/app/src/main/res/layout/fragment_marvel_item.xml
@@ -32,7 +32,7 @@
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
-            android:id="@+id/property_type_text"
+            android:id="@+id/character_type_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -46,7 +46,7 @@
             tools:text="@{item.name}" />
 
         <TextView
-            android:id="@+id/price_value_text"
+            android:id="@+id/description_value_text"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
@@ -58,7 +58,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/main_photo_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/main_photo_image"
-            app:layout_constraintTop_toBottomOf="@+id/property_type_text"
+            app:layout_constraintTop_toBottomOf="@+id/character_type_text"
             app:layout_constraintVertical_bias="0.0"
             tools:text="@{item.description}" />
 
