--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,5 +6,17 @@
     <fragment
         android:id="@+id/marvelListFragment"
         android:name="com.example.marvelApp.ui.marvelList.MarvelListFragment"
-        android:label="MarvelListFragment" />
+        android:label="MarvelListFragment" >
+        <action
+            android:id="@+id/action_marvelListFragment_to_marvelDetailFragment"
+            app:destination="@id/marvelDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/marvelDetailFragment"
+        android:name="com.example.marvelApp.ui.marvelDetail.MarvelDetailFragment"
+        android:label="MarvelDetailFragment" >
+        <argument
+            android:name="characterSelected"
+            app:argType="com.example.marvelApp.model.Character" />
+    </fragment>
 </navigation>
