--- a/app/src/main/res/layout/fragment_marvel_item.xml
+++ b/app/src/main/res/layout/fragment_marvel_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.example.marvelApp.model.Character" />
+            type="com.example.marvelApp.data.model.Character" />
 
         <variable
             name="clickListener"
